Add test for and lines from more than minimum points